--- a/Data Structure Search/Data Structure Search.vcxproj.filters
+++ b/Data Structure Search/Data Structure Search.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="search.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LinkList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
