--- a/Data Structure Search/Data Structure Search.vcxproj
+++ b/Data Structure Search/Data Structure Search.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LinkList.h" />
     <ClInclude Include="search.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
